# artifacts/api-server/src/routes/index.ts
@@ -11,7 +11,6 @@ import eventFinancialRouter from "./event-financial";
 import tasksRouter from "./tasks";
 import frfRouter from "./frf";
 import welfareRouter from "./welfare";
-import jobBureauRouter from "./job-bureau";
 import dkmoMembershipRouter from "./dkmo-membership";
 import storageRouter from "./storage";
 import loansRouter from "./loans";
@@ -35,7 +34,6 @@ router.use(eventFinancialRouter);
 router.use(tasksRouter);
 router.use(frfRouter);
 router.use(welfareRouter);
-router.use(jobBureauRouter);
 router.use(storageRouter);
 router.use(loansRouter);
 router.use(receiptsRouter);
