# lib/db/src/schema/index.ts
@@ -11,4 +11,3 @@ export * from "./audit-logs";
 export * from "./documents";
 export * from "./dkmo_memberships";
 export * from "./welfare";
-export * from "./job-bureau";
